feat: removed Task component from API schema
